Added resize.js to fix 100vh in ios

--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
     </footer>
 
     <link rel="stylesheet" type="text/css" href="/" media="print" />
-    <script src="" async defer></script>
+
+    <script src="assets/js/resize.js" async defer></script>
   </body>
 </html>
