--- a/index.html
+++ b/index.html
@@ -299,6 +299,6 @@
 
     <link rel="stylesheet" type="text/css" href="/" media="print" />
 
-    <script src="assets/js/resize.js" async defer></script>
+    <script src="assets/js/resize.js"></script>
   </body>
 </html>
