Fixed styling for tablet and desktop

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             </div>
           </div>
           <div id="box-3" class="box">
-            <figure>
+            <figure class="box-image">
               <img
                 src="assets/media/images/placeholder-640-square.jpg"
                 alt="Placeholder"
@@ -258,27 +258,27 @@
         <h3 class="section-title">Contatti</h3>
         <div id="contact-section">
           <ul>
-            <li>
+            <li class="contact-list-item">
               <a href="mailto:faker@gmail.com" target="_blank"
                 >E-mail <i class="far fa-envelope"></i
               ></a>
             </li>
-            <li>
+            <li class="contact-list-item">
               <a href="https://facebook.com" target="_blank"
                 >Facebook <i class="fab fa-facebook-f"></i
               ></a>
             </li>
-            <li>
+            <li class="contact-list-item">
               <a href="https://instagram.com" target="_blank"
                 >Instagram <i class="fab fa-instagram"></i
               ></a>
             </li>
-            <li>
+            <li class="contact-list-item">
               <a href="https://spotify.com" target="_blank"
                 >Spotify <i class="fab fa-spotify"></i
               ></a>
             </li>
-            <li>
+            <li class="contact-list-item">
               <a href="https://youtube.com" target="_blank"
                 >Youtube <i class="fab fa-youtube"></i
               ></a>
