Fixed animation after customer's feedback and completed page animation

--- a/index.html
+++ b/index.html
@@ -119,14 +119,7 @@
         <div class="intro-title">
           <h1 id="intro-title">Daniele Bonaiuto</h1>
         </div>
-        <img
-          class="guitar-svg"
-          src="./assets/media/images/note.svg"
-          alt="Guitar
-        svg image"
-          style="height: 100px"
-        />
-        <div class="blend"></div>
+
         <figure class="landing-image">
           <img
             src="assets/media/images/landingimage.png"
@@ -241,6 +234,7 @@
             src="assets/media/images/vinyl.png"
             alt="Immagine di esempio di vinile per Daniele Bonaiuto"
             style="width: 100%"
+            class="rotating"
           />
         </figure>
         <div id="buy-area">
