Fixed animation on section titles

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <!--Listen Section-->
       <section id="listen">
         <h2 class="hidden">Ascolta su Spotify Daniele Bonaiuto</h2>
-        <h3 class="section-title">Ultime uscite su Spotify</h3>
+        <h3 class="section-title listen-title">Ultime uscite su Spotify</h3>
         <div id="songs-grid">
           <div class="box" id="box-1">
             <figure class="box-image">
@@ -261,7 +261,7 @@
       <!--Contact Section-->
       <section id="contact" class="full-area">
         <h2 class="hidden">Contatta Daniele Bonaiuto</h2>
-        <h3 class="section-title">Contatti</h3>
+        <h3 class="section-title contact-title">Contatti</h3>
         <div id="contact-section">
           <ul>
             <li class="contact-list-item">
