Re-fixed resize, adding var(--app-height) in style.css where needed

--- a/index.html
+++ b/index.html
@@ -318,6 +318,6 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="./assets/js/resize.js"></script>
-    <script src="./assets/js/animation.js"></script>
+    <script defer async src="./assets/js/animation.js"></script>
   </body>
 </html>
