Added noopener in links

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             class="cta-button button-text"
             id="bar-to-spotify"
             href="http://spotify.com/"
+            rel="noopener"
             target="_blank"
           >
             <i
@@ -160,6 +161,7 @@
               <a
                 class="cta-button icon-to-spotify"
                 href="https://spotify.com"
+                rel="noopener"
                 target="_blank"
               >
                 <i class="fab fa-spotify"></i>
@@ -179,6 +181,7 @@
               <a
                 class="cta-button icon-to-spotify"
                 href="https://spotify.com"
+                rel="noopener"
                 target="_blank"
               >
                 <i class="fab fa-spotify"></i>
@@ -198,6 +201,7 @@
               <a
                 class="cta-button icon-to-spotify"
                 href="https://spotify.com"
+                rel="noopener"
                 target="_blank"
               >
                 <i class="fab fa-spotify"></i>
@@ -219,6 +223,7 @@
               id="watch-youtube"
               id="bar-to-youtube"
               href="http://youtube.com/"
+              rel="noopener"
               target="_blank"
             >
               <i class="fab fa-youtube"></i>
@@ -247,6 +252,7 @@
               class="cta-button"
               id="icon-to-shopify"
               href="http://shopify.com/"
+              rel="noopener"
               target="_blank"
             >
               $10.99
@@ -265,27 +271,27 @@
         <div id="contact-section">
           <ul>
             <li class="contact-list-item">
-              <a href="mailto:faker@gmail.com" target="_blank"
+              <a href="mailto:faker@gmail.com" rel="noopener" target="_blank"
                 >E-mail <i class="far fa-envelope"></i
               ></a>
             </li>
             <li class="contact-list-item">
-              <a href="https://facebook.com" target="_blank"
+              <a href="https://facebook.com" rel="noopener" target="_blank"
                 >Facebook <i class="fab fa-facebook-f"></i
               ></a>
             </li>
             <li class="contact-list-item">
-              <a href="https://instagram.com" target="_blank"
+              <a href="https://instagram.com" rel="noopener" target="_blank"
                 >Instagram <i class="fab fa-instagram"></i
               ></a>
             </li>
             <li class="contact-list-item">
-              <a href="https://spotify.com" target="_blank"
+              <a href="https://spotify.com" rel="noopener" target="_blank"
                 >Spotify <i class="fab fa-spotify"></i
               ></a>
             </li>
             <li class="contact-list-item">
-              <a href="https://youtube.com" target="_blank"
+              <a href="https://youtube.com" rel="noopener" target="_blank"
                 >Youtube <i class="fab fa-youtube"></i
               ></a>
             </li>
@@ -297,13 +303,11 @@
     <footer>
       <small lang="en_EN"
         >Designed and coded by
-        <a href="http://blueblissstudio.com" lang="it"
-          >Katia De Bon &#169;</a
+        <a href="http://blueblissstudio.com" rel="noopener" target="_blank"
+          >Blue lang="it_IT" >Katia De Bon &#169;</a
         ></small
       >
     </footer>
-
-    <link rel="stylesheet" type="text/css" href="/" media="print" />
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
