Removed animation on youtube video preview, and fixed styling in contact section after testing

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         <h2 class="hidden">Contatta Daniele Bonaiuto</h2>
         <h3 class="section-title contact-title">Contatti</h3>
         <div id="contact-section">
-          <ul>
+          <ul id="contact-section-list">
             <li class="contact-list-item">
               <a href="mailto:faker@gmail.com" rel="noopener" target="_blank"
                 >E-mail <i class="far fa-envelope"></i
@@ -304,7 +304,7 @@
       <small lang="en_EN"
         >Designed and coded by
         <a href="http://blueblissstudio.com" rel="noopener" target="_blank"
-          >Blue lang="it_IT" >Katia De Bon &#169;</a
+          >Katia De Bon &#169;</a
         ></small
       >
     </footer>
