--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 alt="Placeholder"
                 style="width: 100%"
               />
-              <figcaption class="box-title">Titolo</figcaption>
+              <figcaption class="box-title">Un solo Signore</figcaption>
             </figure>
             <div class="spotify-icon">
               <a
@@ -175,7 +175,7 @@
                 alt="Placeholder"
                 style="width: 100%"
               />
-              <figcaption class="box-title">Titolo</figcaption>
+              <figcaption class="box-title">Spirito soffia in me</figcaption>
             </figure>
             <div class="spotify-icon">
               <a
@@ -244,7 +244,7 @@
         </figure>
         <div id="buy-area">
           <div id="buy-title-area">
-            <p id="album-title">Titolo</p>
+            <p id="album-title">Acquista <br />"Spirito soffia in me"</p>
           </div>
           <div id="price-area">
             <p id="album-price"></p>
@@ -302,9 +302,9 @@
     <!--Footer-->
     <footer>
       <small lang="en_EN"
-        >Designed and coded by
+        >Designed and coded with &#10084; <br />by
         <a href="http://blueblissstudio.com" rel="noopener" target="_blank"
-          >Katia De Bon &#169;</a
+          >Katia De Bon - Blue Bliss &#169; 2022 - <br />all rights reserved</a
         ></small
       >
     </footer>
