--- a/index.html
+++ b/index.html
@@ -206,6 +206,11 @@
             </div>
           </div>
         </div>
+        <div class="link-to-lyrics">
+          <a href="https://canzonieredanimain.gatsbyjs.io/" class="cta-button"
+            >Tutti i testi</a
+          >
+        </div>
       </section>
       <!--Watch Section-->
       <section id="watch" class="full-area">
