Added social media links and added sitemap

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--meta properties -->
     <meta
       name="description"
-      content="Daniele Bonaiuto è un cantautore cristiano evangelico."
+      content="Daniele Bonaiuto è un cantautore italiano cristiano evangelico."
     />
     <!--detailed robots meta https://developers.google.com/search/reference/robots_meta_tag -->
     <meta
@@ -35,7 +35,10 @@
     <meta property="og:locale" content="it_IT" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Daniele Bonaiuto" />
-    <meta property="og:description" content="#musicacristiana #cantautore" />
+    <meta
+      property="og:description"
+      content="#danielebonaiutomusic #musicacristiana #cantautore"
+    />
     <meta property="og:url" content="" />
     <meta property="og:site_name" content="" />
     <meta property="og:image" content="images//hom-banner-compressed.jpg" />
@@ -44,7 +47,10 @@
     <meta property="og:image:height" content="660" />
     <!--twitter description-->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:description" content="." />
+    <meta
+      name="twitter:description"
+      content="#danielebonaiutomusic #musicacristiana #cantautore"
+    />
     <meta name="twitter:title" content="Daniele Bonaiuto" />
     <meta name="twitter:site" content="@" />
     <meta name="twitter:image" content="" />
@@ -52,11 +58,11 @@
     <!--opengraph tags for location or address for information panel in google-->
     <meta name="og:latitude" content="" />
     <meta name="og:longitude" content="" />
-    <meta name="og:street-address" content="" />
-    <meta name="og:locality" content="" />
-    <meta name="og:region" content="" />
-    <meta name="og:postal-code" content="" />
-    <meta name="og:country-name" content="" />
+    <meta name="og:street-address" content="via Visome 158" />
+    <meta name="og:locality" content="Belluno" />
+    <meta name="og:region" content="Veneto" />
+    <meta name="og:postal-code" content="32100" />
+    <meta name="og:country-name" content="Italy" />
     <!--search engine verification-->
     <meta name="google-site-verification" content="" />
     <meta name="yandex-verification" content="" />
@@ -207,7 +213,10 @@
           </div>
         </div>
         <div class="link-to-lyrics">
-          <a href="https://canzonieredanimain.gatsbyjs.io/" class="cta-button"
+          <a
+            href="https://canzonieredanimain.gatsbyjs.io/"
+            class="cta-button"
+            target="_blank"
             >Tutti i testi</a
           >
         </div>
@@ -278,12 +287,18 @@
               ></a>
             </li>
             <li class="contact-list-item">
-              <a href="https://facebook.com" rel="noopener" target="_blank"
+              <a
+                href="https://www.facebook.com/Danielebonaiutomusic-101412662375262/"
+                rel="noopener"
+                target="_blank"
                 >Facebook <i class="fab fa-facebook-f"></i
               ></a>
             </li>
             <li class="contact-list-item">
-              <a href="https://instagram.com" rel="noopener" target="_blank"
+              <a
+                href="https://www.instagram.com/danielebonaiutomusic/?utm_medium=copy_link"
+                rel="noopener"
+                target="_blank"
                 >Instagram <i class="fab fa-instagram"></i
               ></a>
             </li>
@@ -293,7 +308,10 @@
               ></a>
             </li>
             <li class="contact-list-item">
-              <a href="https://youtube.com" rel="noopener" target="_blank"
+              <a
+                href="https://www.youtube.com/channel/UC-o5j2y1FdO3bhi5aNJT7aw"
+                rel="noopener"
+                target="_blank"
                 >Youtube <i class="fab fa-youtube"></i
               ></a>
             </li>
