Added links and fixed footer

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
               class="cta-button"
               id="watch-youtube"
               id="bar-to-youtube"
-              href="http://youtube.com/"
+              href="https://www.youtube.com/channel/UC-o5j2y1FdO3bhi5aNJT7aw"
               rel="noopener"
               target="_blank"
             >
@@ -255,14 +255,14 @@
         </figure>
         <div id="buy-area">
           <div id="buy-title-area">
-            <p id="album-title">Acquista <br />"Spirito soffia in me"</p>
+            <p id="album-title">Acquista qui <br />"Spirito soffia in me"</p>
           </div>
           <div id="price-area">
             <p id="album-price"></p>
             <a
               class="cta-button"
               id="icon-to-shopify"
-              href="http://shopify.com/"
+              href="https://www.instagram.com/danielebonaiutomusic/"
               rel="noopener"
               target="_blank"
             >
@@ -282,7 +282,10 @@
         <div id="contact-section">
           <ul id="contact-section-list">
             <li class="contact-list-item">
-              <a href="mailto:faker@gmail.com" rel="noopener" target="_blank"
+              <a
+                href="mailto:danielebonaiuto95@gmail.com"
+                rel="noopener"
+                target="_blank"
                 >E-mail <i class="far fa-envelope"></i
               ></a>
             </li>
@@ -296,7 +299,7 @@
             </li>
             <li class="contact-list-item">
               <a
-                href="https://www.instagram.com/danielebonaiutomusic/?utm_medium=copy_link"
+                href="https://www.instagram.com/danielebonaiutomusic/"
                 rel="noopener"
                 target="_blank"
                 >Instagram <i class="fab fa-instagram"></i
@@ -321,10 +324,12 @@
     </main>
     <!--Footer-->
     <footer>
-      <small lang="en_EN"
+      <small lang="en_EN" class="footer-bluebliss"
         >Designed and coded with &#10084; <br />by
         <a href="http://blueblissstudio.com" rel="noopener" target="_blank"
-          >Katia De Bon - Blue Bliss &#169; 2022 - <br />all rights reserved</a
+          >Katia De Bon <br />
+          - Blue Bliss web development and graphic design &#169; 2022 -
+          <br />all rights reserved</a
         ></small
       >
     </footer>
