Added credits section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="pingback" href="https://danielebonaiuto.it" />
     <title>Daniele Bonaiuto</title>
     <!-- style and script resources -->
+    <link rel="stylesheet" href="static/endcredits.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
@@ -20,11 +21,14 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="assets/style/style.css" media="all" />
+
     <script src=""></script>
     <!--meta properties -->
     <meta
       name="description"
-      content="Daniele Bonaiuto è un cantautore italiano cristiano evangelico."
+      content="Daniele Bonaiuto è un giovane cantautore italiano cristiano evangelico.
+       La sua musica cristiana è influenzata da sonorità pop-rock e risulta essere una novità nel panorama musicale italiano legato alla musica evangelica.
+        Potete ascoltare dal vivo Daniele Bonaiuto ogni domenica mattina presso la chiesa evangelica MCE in Via Cal de Messa 2, Sedico, Belluno."
     />
     <!--detailed robots meta https://developers.google.com/search/reference/robots_meta_tag -->
     <meta
@@ -275,6 +279,7 @@
           </div>
         </div>
       </section>
+
       <!--Contact Section-->
       <section id="contact" class="full-area">
         <h2 class="hidden">Contatta Daniele Bonaiuto</h2>
@@ -322,6 +327,69 @@
         </div>
       </section>
     </main>
+    <!--Ringraziamenti-->
+    <section id="ringraziamenti" class="full-area">
+      <h2 class="hidden">Ringraziamenti di Daniele Bonaiuto</h2>
+      <h3 class="section-title ringraziamenti-title">Ringraziamenti</h3>
+
+      <div class="ringraziamenti-container">
+        <p class="ringraziamenti-testo">
+          La Bibbia insegna a stimarci a vicenda ed ora desidero farlo
+          attraverso il ringraziamento.
+          <br /><br />
+          Grazie ai Pastori Gino ed Angela Mazzoccoli per tutto l’amore che mi
+          avete sempre dato, per avermi dato l'opportunità di proporre alla
+          chiesa quello che lo Spirito Santo mi rivelava anno dopo anno, canzone
+          dopo canzone.
+          <br /><br />
+          Grazie al Pastore Mario Mazzoccoli che non solo ha creduto in me
+          spronandomi, pregando per me, dandomi insegnamenti preziosi che mi
+          hanno fatto crescere ma mi ha proprio accompagnato nella realizzazione
+          di questo progetto, suonando diverse parti di piano e duettando in una
+          cover.
+          <br /><br />
+          Grazie alla mia Famiglia per avermi trasmesso la loro stessa passione
+          di servire Dio con tutto il cuore e con tutte le forze, per aver
+          sopportato le mie prime strimpellate in cameretta ma sopratutto per
+          avermi supportato per andare sempre avanti.
+          <br /><br />
+          Grazie a mia Moglie Cristina De Bon per aver pregato incessantemente
+          per me, per avermi incoraggiato in ogni momento anche quelli più
+          difficili, quelli che nessuno vede ma ci sono, mi ha sempre tirato su
+          e mi ha dato la forza di continuare.
+          <br /><br />
+          Grazie a Luca Durante che non si è fermato alla produzione del CD ma
+          ha fatto ancora di più, oltre ad avermi ospitato in casa sua con la
+          sua splendida famiglia mi ha insegnato davvero tanto, nonostante il
+          poco tempo trascorso insieme ciò che mi ha trasmesso è molto, ha
+          portato in me maturazione e un desiderio ancora più grande di
+          migliorare e dare di più per Dio.
+          <br /><br />
+          Grazie a Katia De Bon per la pazienza che hai avuto nei miei continui
+          cambi di idee nella realizzazione del sito e della parte grafica del
+          CD, per tutto il tempo speso per la realizzazione di questo progetto.
+          <br /><br />
+
+          Grazie a Jacopo Bellini e Manuela Mazzoccoli per essere stati in
+          primis una fonte di ispirazione per la mia vita, ma anche per tutti i
+          consigli e gli aiuti che mi avete dato nel corso degli anni, per come
+          avete creduto in me e per tutte le preghiere spese! Siete preziosi!
+          <br /><br />
+          Grazie ad Oksana Ostapiuk per le splendide foto, Dio ti Benedica.
+          <br /><br />
+          Grazie a Sara Taccardi per la tua splendida voce che ha ha arricchito
+          ogni canzone.
+          <br /><br />
+          Grazie sopratutto al nostro Signore Gesù, ovviamente due righe non
+          basteranno mai, sei il mio Tutto, mi dai la forza ogni giorno di
+          andare avanti e mi guidi in ogni passo, il mio desiderio è quello di
+          essere simile a Te, spero di portare un pezzo di Te attraverso queste
+          canzoni e spero che Tu sia fiero di me.
+          <br /><br />
+          <span class="signature">Daniele Bonaiuto</span>
+        </p>
+      </div>
+    </section>
     <!--Footer-->
     <footer>
       <small lang="en_EN" class="footer-bluebliss"
@@ -333,6 +401,11 @@
         ></small
       >
     </footer>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
