added euro symbol in price

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
               rel="noopener"
               target="_blank"
             >
-              $10.99
+              &euro;10.00
               <i
                 class="fas fa-shopping-cart"
                 style="vertical-align: middle"
