--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta
       name="description"
       content="Daniele Bonaiuto è un giovane cantautore italiano cristiano evangelico.
-       La sua musica cristiana è influenzata da sonorità pop-rock e risulta essere una novità nel panorama musicale italiano legato alla musica evangelica.
+       La sua musica cristiana è influenzata da sonorità pop-rock e si inserisce nel panorama musicale italiano legato alla musica evangelica.
         Potete ascoltare dal vivo Daniele Bonaiuto ogni domenica mattina presso la chiesa evangelica MCE in Via Cal de Messa 2, Sedico, Belluno."
     />
     <!--detailed robots meta https://developers.google.com/search/reference/robots_meta_tag -->
@@ -138,7 +138,7 @@
           <a
             class="cta-button button-text"
             id="bar-to-spotify"
-            href="http://spotify.com/"
+            href="https://open.spotify.com/artist/5VHfNhHsYC30ORu3zEhFnv?si=x5ZLDPpaTFuu2gVMXdxn8A"
             rel="noopener"
             target="_blank"
           >
@@ -167,7 +167,7 @@
             <div class="spotify-icon">
               <a
                 class="cta-button icon-to-spotify"
-                href="https://spotify.com"
+                href="https://open.spotify.com/track/6ZyVDiPE8is5R7RMvLCSKQ?si=a5b156f1ca554a01"
                 rel="noopener"
                 target="_blank"
               >
@@ -187,7 +187,7 @@
             <div class="spotify-icon">
               <a
                 class="cta-button icon-to-spotify"
-                href="https://spotify.com"
+                href="https://open.spotify.com/track/7bkMmE3DbFQdAm2nIySVM0?si=524ca7e9d8c04817"
                 rel="noopener"
                 target="_blank"
               >
@@ -202,12 +202,12 @@
                 alt="Placeholder"
                 style="width: 100%"
               />
-              <figcaption class="box-title">Titolo</figcaption>
+              <figcaption class="box-title">Coming soon</figcaption>
             </figure>
             <div class="spotify-icon">
               <a
                 class="cta-button icon-to-spotify"
-                href="https://spotify.com"
+                href="https://open.spotify.com/artist/5VHfNhHsYC30ORu3zEhFnv?si=qMT8V0g7T-2W8cZTxbOehQ"
                 rel="noopener"
                 target="_blank"
               >
@@ -311,7 +311,10 @@
               ></a>
             </li>
             <li class="contact-list-item">
-              <a href="https://spotify.com" rel="noopener" target="_blank"
+              <a
+                href="https://open.spotify.com/artist/5VHfNhHsYC30ORu3zEhFnv?si=x5ZLDPpaTFuu2gVMXdxn8A"
+                rel="noopener"
+                target="_blank"
                 >Spotify <i class="fab fa-spotify"></i
               ></a>
             </li>
